chore(i18n): update translations (#1343)

--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Ingen tidligere versioner er tilgængelige for denne 
 # Label for the version preview action.
 be.sidebarVersions.preview = Vis eksempel
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = I sidste uge
 # Label for the version promote action.
 be.sidebarVersions.promote = Gør til nuværende
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Gendan
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Gendannet af {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Denne måned
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versionshistorik
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = I dag
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Skift
+be.sidebarVersions.toggle = Skift menuen Handlinger
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Uploadet af {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Du er begrænset til de(n) seneste {versionLimit, number} {versionLimit, plural, one {version} other {versioner}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Versionsnummer {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Ukendt
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = I går
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Størrelse: Mindst → Størst
 # Size descending option shown in the share access drop down select.
