--- a/i18n/es-ES.properties
+++ b/i18n/es-ES.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = No hay versiones anteriores disponibles para este arc
 # Label for the version preview action.
 be.sidebarVersions.preview = Previsualizar
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = La semana pasada
 # Label for the version promote action.
 be.sidebarVersions.promote = Actualizar
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Restaurar
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restaurada por {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Este mes
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Historial de versiones
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Hoy
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Alternar
+be.sidebarVersions.toggle = Alternar menú de acciones
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Cargada por {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Su recuento permitido se limita a {versionLimit, plural, one {la siguiente versión más reciente} other {las siguientes versiones más recientes}}: {versionlimit, number}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Versión {versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Versión número {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Desconocido
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Ayer
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Tamaño: menor → mayor
 # Size descending option shown in the share access drop down select.
