--- a/i18n/hi-IN.properties
+++ b/i18n/hi-IN.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = इस फ़ाइल के लिए पहले 
 # Label for the version preview action.
 be.sidebarVersions.preview = पूर्वावलोकन करें
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = पिछले सप्ताह
 # Label for the version promote action.
 be.sidebarVersions.promote = वर्तमान बनाएँ
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = रीस्टोर करें
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = {name} ने रीस्टोर किया
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = इस माह
 # Title for the preview versions sidebar
 be.sidebarVersions.title = वर्ज़न इतिहास
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = आज
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = टॉगल करें
+be.sidebarVersions.toggle = क्रिया मेनू टॉगल करें
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = {name} ने अपलोड किया
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = आप अंतिम {versionLimit, number} {versionLimit, plural, one {वर्ज़न} other {वर्ज़न}} तक सीमित हैं.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = वर्ज़न {versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = वर्ज़न नंबर {version
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = अज्ञात
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = कल
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = आकार: सबसे छोटा → सबसे बड़ा
 # Size descending option shown in the share access drop down select.
