--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Non sono disponibili versioni precedenti di questo fi
 # Label for the version preview action.
 be.sidebarVersions.preview = Anteprima
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Settimana scorsa
 # Label for the version promote action.
 be.sidebarVersions.promote = Attualizza
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Ripristina
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Ripristinata da {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Mese corrente
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Cronologia versioni
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Oggi
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Cambia
+be.sidebarVersions.toggle = Attiva/Disattiva menu Azioni
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Caricata da {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Puoi avere solo {versionLimit, plural, one {l'ultima versione} other {le ultime versioni}} ({versionLimit, number}).
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Numero versione: {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Sconosciuto
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Ieri
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Dimensioni: Minime → Massime
 # Size descending option shown in the share access drop down select.
