--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Ingen tidligere versjoner er tilgjengelige for denne 
 # Label for the version preview action.
 be.sidebarVersions.preview = Forhåndsvis
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Forrige uke
 # Label for the version promote action.
 be.sidebarVersions.promote = Gjør gjeldende
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Gjenopprett
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Gjenopprettet av {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Denne måneden
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versjonshistorikk
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = I dag
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Aktiver/deaktiver
+be.sidebarVersions.toggle = Aktiver/deaktiver Handlinger-menyen
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Lastet opp av {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Du er begrenset til siste {versionLimit, number} {versionLimit, plural, one {versjon} other {versjoner}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Versjon {versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Versjonsnummer: {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Ukjent
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = I går
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Størrelse: minst → størst
 # Size descending option shown in the share access drop down select.
