--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Er zijn geen eerdere versies beschikbaar voor dit bes
 # Label for the version preview action.
 be.sidebarVersions.preview = Voorbeeld bekijken
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Afgelopen week
 # Label for the version promote action.
 be.sidebarVersions.promote = Actief maken
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Herstellen
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Hersteld door {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Deze maand
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versiegeschiedenis
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Vandaag
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = In-/uitschakelen
+be.sidebarVersions.toggle = Actiemenu in-/uitschakelen
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Geüpload door {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = U bent beperkt tot de laatste {versionLimit, number} {versionLimit, plural, one {versie} other {versies}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Versienummer {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Onbekend
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Gisteren
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Grootte: kleinste → grootste
 # Size descending option shown in the share access drop down select.
