--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Brak dostępnych wcześniejszych wersji tego pliku.
 # Label for the version preview action.
 be.sidebarVersions.preview = Wyświetlanie podglądu
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Ostatni tydzień
 # Label for the version promote action.
 be.sidebarVersions.promote = Przywróć wersję jako bieżącą
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Przywróć
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Przywrócone przez użytkownika {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Ten miesiąc
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Historia wersji
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Dzisiaj
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Przełączanie
+be.sidebarVersions.toggle = Przełącz menu czynności
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Przekazane przez użytkownika {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Używać można jedynie ostatniej(-ich) {versionLimit, number} {versionLimit, plural, one {wersja} other {wersji}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Wersja {versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Numer wersji: {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Nieznany
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Wczoraj
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Rozmiar: najmniejszy → największy
 # Size descending option shown in the share access drop down select.
