--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Nenhuma versão anterior disponível para este arquiv
 # Label for the version preview action.
 be.sidebarVersions.preview = Visualizar
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Na semana anterior
 # Label for the version promote action.
 be.sidebarVersions.promote = Tornar atual
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Restaurar
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restaurada por {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Este mês
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Histórico de versões
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Hoje
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Alternar
+be.sidebarVersions.toggle = Alternar o menu de ações
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Carregada por {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Você está limitado à(s) última(s) {versionLimit, number} {versionLimit, plural, one {versão} other {versões}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Número da versão {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Desconhecido
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Ontem
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Tamanho: menor → maior
 # Size descending option shown in the share access drop down select.
