--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Bu dosya için önceki bir sürüm mevcut değil.
 # Label for the version preview action.
 be.sidebarVersions.preview = Ön görüntüle
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Geçen Hafta
 # Label for the version promote action.
 be.sidebarVersions.promote = Geçerli Kıl
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Eski Haline Getir
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = {name} tarafından eski haline getirildi
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Bu Ay
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Sürüm Geçmişi
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Bugün
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Aç/Kapat
+be.sidebarVersions.toggle = Eylemler Menüsünü Aç/Kapat
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = {name} tarafından yüklendi
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Son {versionLimit, number} {versionLimit, plural, one {sürüm} other {sürüm}} ile sınırlısınız.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Sürüm numarası {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Bilinmeyen
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Dün
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Boyut: En Küçük → En Büyük
 # Size descending option shown in the share access drop down select.
