--- a/i18n/zh-CN.properties
+++ b/i18n/zh-CN.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = 此文件没有可用的旧版本。
 # Label for the version preview action.
 be.sidebarVersions.preview = 预览
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = 上周
 # Label for the version promote action.
 be.sidebarVersions.promote = 设为当前
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = 恢复
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = 由 {name} 还原
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = 本月
 # Title for the preview versions sidebar
 be.sidebarVersions.title = 版本历史记录
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = 今天
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = 切换
+be.sidebarVersions.toggle = 切换操作菜单
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = 由 {name} 上传
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = 您仅限于最后 {versionLimit, number} {versionLimit, plural, one { 个版本} other {个版本}}。
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = 版本号 {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = 未知
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = 昨天
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = 大小：最小 → 最大
 # Size descending option shown in the share access drop down select.
