--- a/i18n/zh-TW.properties
+++ b/i18n/zh-TW.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = 此檔案沒有先前的版本可用。
 # Label for the version preview action.
 be.sidebarVersions.preview = 預覽
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = 上週
 # Label for the version promote action.
 be.sidebarVersions.promote = 還原為最新
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = 還原
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = 已由 {name} 還原
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = 本月
 # Title for the preview versions sidebar
 be.sidebarVersions.title = 版本記錄
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = 今天
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = 切換
+be.sidebarVersions.toggle = 切換動作功能表
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = 已由 {name} 上傳
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = 您只能有最後 {versionLimit, number} {versionLimit, plural, one {個版本} other {個版本}}。
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = 版本編號 {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = 未知
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = 昨天
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = 大小：最小 → 最大
 # Size descending option shown in the share access drop down select.
