--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Für diese Datei sind keine vorherigen Versionen verf
 # Label for the version preview action.
 be.sidebarVersions.preview = In der Vorschau anzeigen
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Letzte Woche
 # Label for the version promote action.
 be.sidebarVersions.promote = Als aktuell festlegen
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Wiederherstellen
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Von {name} wiederhergestellt
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Diesen Monat
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versionsverlauf
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Heute
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Umschalten
+be.sidebarVersions.toggle = Menü „Aktionen“ umschalten
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Von {name} hochgeladen
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Sie sind auf die letzte(n) {versionLimit, number} {versionLimit, plural, one {Version} other {Versionen}} eingeschränkt.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Versionsnummer {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Unbekannt
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Gestern
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Größe: Kleinste → Größte
 # Size descending option shown in the share access drop down select.
