--- a/i18n/en-GB.properties
+++ b/i18n/en-GB.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = No prior versions are available for this file.
 # Label for the version preview action.
 be.sidebarVersions.preview = Preview
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Last week
 # Label for the version promote action.
 be.sidebarVersions.promote = Make current
 # Label for the version restore action.
@@ -331,13 +331,13 @@ be.sidebarVersions.restore = Restore
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restored by {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = This month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Version history
 # Header to display for group of versions created yesterday
 be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Toggle
+be.sidebarVersions.toggle = Toggle actions menu
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Uploaded by {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
