--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Tästä tiedostosta ei ole saatavana aiempia versioit
 # Label for the version preview action.
 be.sidebarVersions.preview = Esikatselu
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = Viime viikolla
 # Label for the version promote action.
 be.sidebarVersions.promote = Tee nykyiseksi
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Palauta
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Palauttanut {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Tässä kuussa
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versiohistoria
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Tänään
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Vaihda
+be.sidebarVersions.toggle = Näytä/piilota toimintovalikko
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Ladannut palveluun {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Voit käyttää enintään {versionLimit, number} {versionLimit, plural, one {versiota} other {versiota}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Versio {versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Versionumero {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Tuntematon
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Eilen
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Koko: pienin → suurin
 # Size descending option shown in the share access drop down select.
