--- a/i18n/fr-FR.properties
+++ b/i18n/fr-FR.properties
@@ -323,7 +323,7 @@ be.sidebarVersions.empty = Aucune version antérieure n'est disponible pour ce f
 # Label for the version preview action.
 be.sidebarVersions.preview = Prévisualiser
 # Header to display for group of versions created in the prior week
-be.sidebarVersions.priorWeek = Last Week
+be.sidebarVersions.priorWeek = La semaine dernière
 # Label for the version promote action.
 be.sidebarVersions.promote = Version actuelle
 # Label for the version restore action.
@@ -331,17 +331,17 @@ be.sidebarVersions.restore = Restaurer
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restaurée par {name}
 # Header to display for group of versions created in the current month
-be.sidebarVersions.thisMonth = This Month
+be.sidebarVersions.thisMonth = Ce mois-ci
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Historique de versions
 # Header to display for group of versions created yesterday
-be.sidebarVersions.today = Today
+be.sidebarVersions.today = Aujourd'hui
 # Label for the version actions dropdown menu toggle button.
-be.sidebarVersions.toggle = Basculer
+be.sidebarVersions.toggle = Afficher/masquer le menu d'actions
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Chargée par {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
-be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
+be.sidebarVersions.versionLimitExceeded = Vous êtes limité à la dernière/aux dernières {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -349,7 +349,7 @@ be.sidebarVersions.versionNumberLabel = Numéro de version {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Inconnu
 # Header to display for group of versions created today
-be.sidebarVersions.yesterday = Yesterday
+be.sidebarVersions.yesterday = Hier
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Taille : du plus petit au plus grand
 # Size descending option shown in the share access drop down select.
