chore(i18n): update translations (#1348)

--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Der opstod en fejl under afvisningen af denne opgave
 be.taskShowLessAssignees = Vis mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Vis {additionalAssigneeCount} flere
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Tilføj opgave
 # label for menu item that opens approval task popup
