--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Beim Ablehnen der Aufgabe ist ein Fehler aufgetreten
 be.taskShowLessAssignees = Weniger anzeigen
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = {additionalAssigneeCount} weitere anzeigen
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Aufgabe hinzufügen
 # label for menu item that opens approval task popup
