--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Podczas odrzucania tego zadania wystąpił błąd. O
 be.taskShowLessAssignees = Pokaż mniej
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Pokaż {additionalAssigneeCount} więcej
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Dodaj zadanie
 # label for menu item that opens approval task popup
