--- a/i18n/sv-SE.properties
+++ b/i18n/sv-SE.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Ett fel inträffade när uppgiften avvisades. Uppdat
 be.taskShowLessAssignees = Visa mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Visa {additionalAssigneeCount} mer
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Lägg till uppgift
 # label for menu item that opens approval task popup
