--- a/i18n/en-CA.properties
+++ b/i18n/en-CA.properties
@@ -405,7 +405,9 @@ be.taskRejectErrorMessage = An error has occurred while rejecting this task. Ple
 # Button name to hide task assignee list
 be.taskShowLessAssignees = Show Less
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = {additionalAssigneeCount, plural, one {Show # More} other {Show # More}}
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Add Task
 # label for menu item that opens approval task popup
