--- a/i18n/en-GB.properties
+++ b/i18n/en-GB.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = An error has occurred while rejecting this task. Ple
 be.taskShowLessAssignees = Show less
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Show {additionalAssigneeCount} more
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Add task
 # label for menu item that opens approval task popup
