--- a/i18n/es-ES.properties
+++ b/i18n/es-ES.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Se ha producido un error al rechazar esta tarea. Act
 be.taskShowLessAssignees = Mostrar menos
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Mostrar {additionalAssigneeCount} más
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Agregar tarea
 # label for menu item that opens approval task popup
