--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Tehtävän hylkäämisen aikana tapahtui virhe. Päi
 be.taskShowLessAssignees = Näytä vähemmän
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Näytä {additionalAssigneeCount} enemmän
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Lisää tehtävä
 # label for menu item that opens approval task popup
