--- a/i18n/fr-CA.properties
+++ b/i18n/fr-CA.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Une erreur s'est produite lors du refus de cette tâ
 be.taskShowLessAssignees = Afficher moins
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Afficher {additionalAssigneeCount} de plus
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Ajouter une tâche
 # label for menu item that opens approval task popup
