--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Si è verificato un errore durante il rifiuto dell'a
 be.taskShowLessAssignees = Mostra meno
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Mostra altri {additionalAssigneeCount}
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Aggiungi attività
 # label for menu item that opens approval task popup
