--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Det oppsto en feil ved avvisningen av denne oppgaven
 be.taskShowLessAssignees = Vis mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Vis {additionalAssigneeCount} mer
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Legg til oppgave
 # label for menu item that opens approval task popup
