--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Er is een fout opgetreden tijdens het afwijzen van d
 be.taskShowLessAssignees = Minder weergeven
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = {additionalAssigneeCount} meer weergeven
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Taak toevoegen
 # label for menu item that opens approval task popup
