--- a/i18n/ru-RU.properties
+++ b/i18n/ru-RU.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Ошибка при отклонении этой з
 be.taskShowLessAssignees = Скрыть
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = Показать еще {additionalAssigneeCount}
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Добавить задачу
 # label for menu item that opens approval task popup
