--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -406,6 +406,8 @@ be.taskRejectErrorMessage = Bu görev reddedilirken bir hata oluştu. Lütfen sa
 be.taskShowLessAssignees = Daha Az Göster
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
 be.taskShowMoreAssignees = {additionalAssigneeCount} Adet Daha Göster
+# Button name to expand task assignee list, when there is an unknown number of assignees beyond additionalAssigneeCount.
+be.taskShowMoreAssigneesOverflow = {additionalAssigneeCount, plural, one {Show #+ More} other {Show #+ More}}
 # label for button that opens task popup
 be.tasks.addTask = Görev ekleyin
 # label for menu item that opens approval task popup
