feat(preview): better message when blocked by a policy (#1346)
* feat(preview): better message when blocked by a policy

* fix: PR feedback

--- a/i18n/en-US.properties
+++ b/i18n/en-US.properties
@@ -320,6 +320,8 @@ be.pointAnnotation = Point annotation mode
 be.preview = Preview
 # Error message when Preview fails due to the files call.
 be.previewError = We’re sorry, the preview didn’t load. Please refresh the page.
+# Error message when Preview fails due to the files call which is blocked by an access policy.
+be.previewErrorBlockedByPolicy = Your access is restricted due to the classification applied to this content.
 # Message when new preview is available.
 be.previewUpdate = A new version of this file is available.
 # Previous file button title
